# pyiptp

./: .gitignore  README.md  build_wheel.bat  build_wheel.sh  build_wheel_MAC.sh  compile_win64.bat  manylinux_wheel.sh  pyproject.toml  setup.cfg  setup.py
py_envs/: cp37.yml  cp38.yml  cp39.yml
py_envs/posix/: cp36.yml  cp37.yml  cp38.yml  cp39.yml
py_envs/win/: cp36.yml
pyiptp/: basicfunc.c  basicfunc.pyx  cython_ubsplclib.c  cython_ubsplclib.pyx  defdatastruct.c  defdatastruct.pyx  factoryfunc.c  factoryfunc.pyx  ubsplclib.h  utils.pxi
