[metadata]
name = pyiptp
description = Iso-Parametric Trajectory Planning python toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/projectcamomile/pyiptp
author = Marco Riboli
author_email = marco.riboli@unipr.it
license = BSD-3-Clause
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
setup_requires =
    setuptools>=18.0
install_requires =
    numpy>=1.19.2
    scipy>=1.5.2
    lxml>=4.6.3
python_requires = >=3.6
include_package_data = True